gap removed to fix background issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,7 @@ body {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	background-image: url('../../public/bg-intro-desktop.png');
+
 	background-color: hsl(0, 100%, 74%);
 
 	justify-items: center;
@@ -60,15 +61,16 @@ body {
 form {
 	display: grid;
 	background-color: white;
-	padding: 2rem;
-	margin: 1rem;
 	border-radius: 10px;
-	gap: 1rem;
 	max-width: 30rem;
+
+	padding: 1rem;
+	margin: 0 1rem;
 }
 
 input {
 	padding: 1rem 2rem;
+	margin: 0.5rem;
 	border-radius: 5px;
 	border: 1px solid gainsboro;
 }
@@ -87,6 +89,8 @@ button {
 	font-weight: 600;
 
 	transition: 0.05s ease-out;
+
+	margin-top: 1rem;
 }
 
 button:hover {
@@ -114,15 +118,16 @@ a {
 
 .error-message {
 	justify-self: end;
-	margin: -10px;
+	margin: -8px;
 	color: red;
 	margin-right: 0;
 	position: relative;
+	right: 10px;
 }
 
 svg {
 	position: absolute;
-	bottom: 38px;
+	bottom: 30px;
 	right: 20px;
 }
 
@@ -134,6 +139,7 @@ svg {
 	.main-wrapper {
 		grid-template-columns: auto;
 		background-image: url('../../public/bg-intro-mobile.png');
+		background-size: cover;
 	}
 
 	.text-wrapper {
